Fix header nav being covered by the carousel when scrolling down

--- a/app/assets/stylesheets/components/_company_home_header_nav.scss
+++ b/app/assets/stylesheets/components/_company_home_header_nav.scss
@@ -4,6 +4,8 @@
     position: fixed;
     top: 0;
     width: 100vw;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .home-header-nav{
